OSG News (most significant items from ChangeLog)
================================================

13th August 2004 - OpenSceneGraph-0.9.7-2

    Build fixes for VisualStudio6.0.  
    Fixes for osgFX registry support. 
    Added support in osgTerrain for reading imagery with color tables. 
    

9th August 2004 - OpenSceneGraph-0.9.7

    >>> support for and generation of large scale geospatial databases,
    >>> support for movies and examples of shadows and volume rendering.
    
    The 0.9.7 encompasses many improvements, bug fixes, new examples and 
    significant new functionality, the most notable of which is a new 
    osgTerrain library for generation of large scale geospatial databases.
    
    The new osgTerrain library and associated osgdem utility program 
    allows users to use moziacs of geospatial imagery and digital elevation
    maps to generate a complete paged database which can be used with 
    standard OSG viewers, and users programs. By utilising GDAL to load the
    imagery and DEM's a wide range of geospatial formats are supported.   
     
    The TerraPage plugin has also been rewritten ontop of the OSG's 
    osg::PagedLOD and osgDB::DatabasePager which provides support for the 
    tile fallback mechanism to ensure that no holes or cracks appear in the
    databases being roamed, and to achieve constant frame rate via load 
    balancing mechanisms with osgDB::DatabasePager.
    
    The osgDB::DatabasePager has been further improved to provide more 
    configurable load balancing which allows application developers to achieve
    constant frame rates when using paged databases.
    
    Double Vec & Matrix classes & CoordinateSystemNode/EllipsoidModel class
    have been introduced to better support browsing of large scale databases,
    and to provide a mechanism for tracking the local up orientation when 
    roaming whole earth databases.
    
    osgUtil has been enhanced with: