@@ -327,7 +327,7 @@ grow
 to appreciate.
 <p>The project is currently in beta, which means the main core features
 are now in
-place, with a 1.0 release in second half of 2003. Despite the beta
+place, with a 1.0 release in second half of 2004. Despite the beta
 development status,
 the project has already earned the reputation as the leading open
 source scene
@@ -388,6 +388,10 @@ page.
 </p>
 <h3>
 <u>Learning how to use the OpenSceneGraph</u></h3>
+<p>The main collections of resources for learning how to use the
+OpenSceneGraph can be found on openscenegraph.org documentaiton page,
+please check this out regular for new entries.<br>
+</p>
 <p>The OpenSceneGraph distribution comes with a reference guide for
 each of
 the component libraries - osg, osgDB, osgUtil, osgText, osgSim,
@@ -402,7 +406,15 @@ the beginnings of a <a
  href="http://www.c2.com/cgi/wiki?OpenSceneGraphFaq">Wiki
 based FAQ</a> which may help answer a few of the common queries.
 </p>
-<p>A programming guide will be available in form of a OpenSceneGraph
+<p>Two sets of online tutorial been written by members of the
+OpenSceneGraph community:<br>
+&nbsp;&nbsp;&nbsp; Jason McVeigh's <a
+ href="http://www.tersesolutions.net/osgt/">OpenSceneGraph Tutorials</a><br>
+&nbsp;&nbsp;&nbsp; Joseph Sullivan's&nbsp; <a
+ href="http://www.nps.navy.mil/cs/sullivan/osgTutorials/index.html">OpenSceneGraph
+Tutorials</a><br>
+&nbsp;<br>
+A programming guide will be available in form of a OpenSceneGraph
 book
 which is being written by Don Burns and Robert Osfield, parts of it
 will
